predictive planning output